apps/machinery-registry-api/requirements.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${MACHINERY_REGISTRY_API_NAMESPACE:-machinery-registry}
  labels:
    toolkit.fluxcd.io/tenant: sthings-team
