apps/machinery-registry-api/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: machinery-registry-api
  namespace: ${MACHINERY_REGISTRY_API_NAMESPACE:-machinery-registry}
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE:-default}
  hostnames:
    - ${HOSTNAME}.${DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: machinery-registry-api
          port: 8090
